2006-04-03  Lars Povlsen  <lpovlsen@vitesse.com>
 
 	* src/flash.c (fis_update_directory): Fixed flash region size when
	CYGSEM_REDBOOT_FLASH_COMBINED_FIS_AND_CONFIG is enabled.
 
2006-03-27  Gary Thomas  <gary@mlbassoc.com>

	* src/net/tcp.c (__tcp_write_block): Fix calculation of actual
	total number of bytes sent (from Wolfgang Koebler)

2006-02-25  Oliver Munz  <munz@speag.ch>
	    Andrew Lunn  <andrew.lunn@ascom.ch>
	
	* src/xyzModem.c (xyzModem_stream_open): Fix compiler warnings.
	* src/flash_load.c (NEW): Implements access to flash
	* src/load.c: Allow load command to load directly into flash
	* cdl/redboot.c (CYGBLD_REDBOOT_LOAD_INTO_FLASH) Control new
	feature, disabled by default.
	* cdl/main.c (cyg_start): Assert check to see if we have 
	overflowed the workspace.
	* doc/redboot_cmds.sgml: Document new flag.
	
2006-02-17  Andrew Lunn  <andrew.lunn@ascom.ch>

	* src/flash.c (fis_lock & fis_unlock): Allow compilation without
	FIS being enabled.
	* src/flash.c (fis_update_directory): When reading/writing flash
	use the full size of the fis directory, not just one block.

2005-11-23  Peter Korsgaard  <peter.korsgaard@barco.com>

	* src/gunzip.c (do_gunzip): Fixed diag_printf format string warnings.

2005-10-17  Gary Thomas  <gary@mlbassoc.com>

	* src/iomem.c (do_iopeek): Correct number of options.

2005-09-09  Andrew Dyer  <adyer@righthandtech.com>
 
 	* src/load.c: add calls to redboot_getc_terminate before exiting
 	load_elf_image() in various error scenarios, change the final call
 	to redboot_getc_terminate to have the error flag set.  This will
 	cause a tftp nak and close down the connection since for ELF files
 	we don't read the whole content but end the connection when the
 	runnable parts are in.
 
 	* src/net/tftp_client.c: add tftp_error() to send an error back to
 	the server. define tftp_stream_terminate() and pass it into the
 	redboot interface.
 
2005-09-08  Gary Thomas  <gary@mlbassoc.com>

	* src/io.c: 
	* include/redboot.h: 